# mygit

Onboard-SDK-ROS-3.8/Onboard-SDK-3.8.1-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
Onboard-SDK-ROS-3.8/Onboard-SDK-3.8.1-build/osdk-core/: Makefile  cmake_install.cmake  djiosdkTargets.cmake
Onboard-SDK-ROS-3.8/dji_sdk_demo/: CMakeLists.txt  jingwei.txt  main.cpp  package.xml
Onboard-SDK-ROS-3.8/dji_sdk_demo/parameters/: x_y_zvel_yawrate_pids.yaml
Onboard-SDK-ROS-3.8/dji_sdk_demo/src/: ADRC.cpp  Adp_Adrc.c  demo_flight_control(pid).cpp  demo_flight_control(原）.cpp  demo_flight_control.cpp  demo_flight_control_mpc.cpp  demo_flight_control_play.cpp  demo_flight_control_原件.cpp  demo_flight_control_识别直曲线.cpp  demo_flight_lqr.cpp  (+8 more)
Onboard-SDK-ROS-3.8/min_snap/: CMakeLists.txt  c2.txt  gh.txt  package.xml
Onboard-SDK-ROS-3.8/traj_server/: CMakeLists.txt  package.xml
mav_control_rw-master/: README.md
mav_trajectory_generation-master/mav_trajectory_generation_ros/: CMakeLists.txt
robot_localization-melodic-devel/: comp_xy.py  visu.py  visu.txt
robot_localization-melodic-devel/launch/: ekf_template.launch  navsat_ekf.launch  navsat_transform_template.launch
robot_localization-melodic-devel/params/: ekf_template.yaml  navsat_transform_template.yaml
rotors_simulator-master/rotors_gazebo/: CMakeLists.txt  package.xml
rotors_simulator-master/rotors_gazebo/launch/: mav_hovering_example.launch  runcircle.launch
rotors_simulator-master/rotors_gazebo/src/: run_circle_locus.cpp  waypoint_publisher.cpp  waypoint_publisher_file.cpp
(+86 files in other folders)
