<package format="2">
  <name>rotors_gazebo</name>
  <version>2.2.3</version>
  <description>The rotors_gazebo package</description>

  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Mina Kamel</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/rotors_simulator</url>
  <url type="bugtracker">https://github.com/ethz-asl/rotors_simulator/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_plugins</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>mav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rotors_gazebo_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>mav_trajectory_generation_ros</depend>
  <depend>mav_visualization</depend>
  <depend>mav_planning_msgs</depend>
    <exec_depend>nav_msgs</exec_depend>
</package>
